Compar: INFRA-1534: Add tests